aks-deployment/keycloak-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin-ingress
  namespace: essedum
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Host $host:30443;
      proxy_set_header X-Forwarded-Port 30443;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header Host $host;
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.essedum.local
    secretName: essedum-tls
  rules:
  - host: keycloak.essedum.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
